syntax = "proto3";


message VoteReq {
    //quorum序列号
    uint64 id = 1;
    //来自哪个节点
    uint32 from = 2;
    uint32 term = 3;
    uint64 lastLogIndex = 4;
    uint32 lastLogTerm = 5;
}


message AppendReq {
    //quorum序列号,非论文中的id
    uint64 id = 1;
    //来自哪个节点
    uint32 from = 2;
    uint32 term = 3;
    uint64 prevLogIndex = 4;
    uint32 prevLogTerm = 5;
    uint64 leaderCommit = 6;
    repeated Log logs = 7;
}

message HeartbeatReq {
    uint32 term = 1;
    uint64 leaderCommit = 2;
}


message Cmd {
    enum Opt {
        Get = 0;
        Set = 1;
    }
    enum ReadMode {
        Default = 0;
        Lease = 1;
        ReadIndex = 2;
        FollowerRead = 3;
    }
    Opt opt = 1;
    ReadMode readMode = 2;
    string key = 3;
    string value = 4;
}

message Log {
    Cmd cmd = 1;
    uint32 term = 2;
    uint64 index = 3;
}


message VoteResp {
    uint64 id = 1;
    uint32 term = 2;
    bool grant = 3;
}
message AppendResp {
    uint64 id = 1;
    uint32 from = 2;
    uint32 term = 3;
    bool success = 4;
    uint64 lastLogIndex = 5;

}
message HeartbeatResp {
    uint32 term = 1;
    uint32 from = 2;
    bool success = 3;
    uint64 lastLogIndex = 4;
}

message CmdResp {
    string res = 1;
    bool isLeader = 2;
    string leaderAddr = 3;
}